Fixed: bug where there was aa spacing that was fixed after Nav

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -2,3 +2,4 @@
 $color-dark: #000;
 $color-light: #fff;
 $color-primary: #33c866;
+$color-background: #d4d4d4;
